overlays/istio/gateway/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-vs
  namespace: default
spec:
  gateways:
    - app-gateway
  hosts:
    - "*"
  tls:
    - match:
        - port: 443
          sniHosts:
            - az-argocd
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 443
